# android-testcode

./: .gitignore  README.md
CPP11Demo/: .project  AndroidManifest.xml
CPP11Demo/jni/: Android.mk  list_02_01.cpp  list_02_02.cpp
CPP11Demo/res/layout/: activity_main.xml  fragment_main.xml
CPP11Demo/res/menu/: main.xml
CPP11Demo/res/values/: strings.xml
ForkTest/: .project  AndroidManifest.xml
ForkTest/jni/: Android.mk  fork.c
ForkTest/res/values/: strings.xml
LocalServiceTest/: .project  AndroidManifest.xml
LocalServiceTest/res/layout/: activity_main.xml
LocalServiceTest/res/values/: strings.xml
MallocTest/: .project  AndroidManifest.xml
MallocTest/jni/: Android.mk  malloc_test.c
MallocTest/res/layout/: activity_main.xml
MallocTest/res/values/: strings.xml
MyBrowser/: AndroidManifest.xml
MyBrowser/res/values/: strings.xml
ProOpenGL/ch1/BouncySqure/: .project  AndroidManifest.xml
ReadSymbolLinkTest/: .project  AndroidManifest.xml
ReadSymbolLinkTest/jni/: Android.mk  read_symbol_link_test.c
ReadSymbolLinkTest/res/values/: strings.xml
RemoteServiceClient/: .project  AndroidManifest.xml
RemoteServiceClient/res/layout/: activity_main.xml
RemoteServiceClient/res/values/: strings.xml
RemoteServiceComplex/: .project  AndroidManifest.xml
RemoteServiceComplex/res/layout/: main.xml
RemoteServiceComplex/res/values/: strings.xml
RemoteServiceComplexClient/: .project  AndroidManifest.xml
RemoteServiceComplexClient/res/layout/: activity_main.xml
RemoteServiceComplexClient/res/values/: strings.xml
RemoteServiceTest/: AndroidManifest.xml
RemoteServiceTest/res/values/: strings.xml
SocketPairTest/: .project  AndroidManifest.xml
SocketPairTest/jni/: Android.mk  socketpair.c
SocketPairTest/res/values/: strings.xml
bind_callback/: CMakeLists.txt
bind_callback/tests/: callback_unittest.cc
concurrency_in_action/HelloThread/app/: build.gradle
malloc_debug_leak/app/: build.gradle
malloc_debug_leak/gradle/wrapper/: gradle-wrapper.properties
(+34 files in other folders)
